# git-analytics

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml  code-check-dev.yml  python-matrix-main.yml
git_analytics/: engine.py  entities.py  interfaces.py  main.py  web_app.py
git_analytics/adapters/: __init__.py  git_commit_adapter.py  git_text_adapter.py
git_analytics/analyzers/: __init__.py  authors_statistics.py  commit_type.py  commits_summary.py  core.py  historical_statistics.py  lines_statistics.py
git_analytics/analyzers/builtin/: authors_statistics.py  commit_type.py  historical_statistics.py  lines_statistics.py
git_analytics/sources/: __init__.py  git_commit_adapter.py
git_analytics/static/: index.html
git_analytics/static/css/: bootstrap.min.css
git_analytics/static/js/: chart.umd.min.js  git-analytics.js  pyproject.toml
src/git_analytics/: index.html  main.py
tests/: fake_analyzer.py  fake_commit_source.py  fake_data.py  test_data.py  test_engine.py  test_first.py
tests/test_analyzers/: test_authors_statistics.py
