[tool.poetry]
name = "git-analytics"
version = "0.1.9"
description = "Advanced analytics for Git repositories — commits, authors, code churn, lines of code, trends, and visual dashboards."
authors = ["n0rfas <n0rfas@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://git-analytics.com"
repository = "https://github.com/n0rfas/git-analytics"
keywords = ["git", "git-statistics", "git-status", "code-metrics", "lines-of-code", "commit-history", "git-analysis", "git-metrics", "git-commits", "repo-stats git-stats", "repository-metrics", "developer-metrics", "git-analytics code-statistics", "commit-analysis", "git-analyze", "git-insights", "repo-analysis", "git-repo-stats"]
packages = [{include = "git_analytics"}]

[tool.poetry.dependencies]
python = ">=3.7"
GitPython = "~=3.1.0"
falcon = "~=3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
mypy = "^1.4"
ruff = "^0.12"

[tool.poetry.scripts]
git-analytics = 'git_analytics.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120